[gd_scene load_steps=8 format=3 uid="uid://bqxvhxqxqxqxq"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_0k8m2"]
[ext_resource type="Script" path="res://scripts/hive_core.gd" id="2_1k9n3"]
[ext_resource type="Script" path="res://scripts/unit.gd" id="3_2l0o4"]
[ext_resource type="Script" path="res://scripts/worker_drone.gd" id="4_3m1p5"]
[ext_resource type="Script" path="res://scripts/harvester.gd" id="5_4n2q6"]
[ext_resource type="Script" path="res://scripts/queen.gd" id="6_5o3r7"]
[ext_resource type="Script" path="res://scripts/larvae.gd" id="7_6p4s8"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="8_7q5t9"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="9_8r6u0"]
[ext_resource type="Script" path="res://scripts/resource_node.gd" id="10_9s7v1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(32, 32)

[node name="Main" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
format = 2
tile_set = SubResource("TileSet_1")
cell_size = Vector2i(16, 16)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon2D_1")

[node name="Units" type="Node2D" parent="."]

[node name="WorkerDrone1" type="CharacterBody2D" parent="Units"]
position = Vector2(672, 360)
script = ExtResource("4_3m1p5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Units/WorkerDrone1"]
shape = SubResource("RectangleShape2D_1")

[node name="Sprite2D" type="Sprite2D" parent="Units/WorkerDrone1"]
modulate = Color(0.2, 0.6, 0.8, 1)
texture = SubResource("GradientTexture2D_2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Units/WorkerDrone1"]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Units/WorkerDrone1"]

[node name="Structures" type="Node2D" parent="."]

[node name="HiveCore" type="StaticBody2D" parent="Structures"]
position = Vector2(640, 360)
script = ExtResource("2_1k9n3")

[node name="Sprite2D" type="Sprite2D" parent="Structures/HiveCore"]
modulate = Color(0.8, 0.2, 0.8, 1)
texture = SubResource("GradientTexture2D_1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Structures/HiveCore"]
shape = SubResource("RectangleShape2D_1")

[node name="Resources" type="Node2D" parent="."]

[node name="BiomassNode1" type="StaticBody2D" parent="Resources"]
position = Vector2(400, 300)
script = ExtResource("10_9s7v1")

[node name="Sprite2D" type="Sprite2D" parent="Resources/BiomassNode1"]
modulate = Color(0.2, 0.8, 0.2, 1)
texture = SubResource("GradientTexture2D_2")

[node name="MineralsNode1" type="StaticBody2D" parent="Resources"]
position = Vector2(800, 400)
script = ExtResource("10_9s7v1")

[node name="Sprite2D" type="Sprite2D" parent="Resources/MineralsNode1"]
modulate = Color(0.6, 0.6, 0.6, 1)
texture = SubResource("GradientTexture2D_3")

[node name="Enemies" type="Node2D" parent="."]

[node name="Enemy1" type="CharacterBody2D" parent="Enemies"]
position = Vector2(300, 500)
script = ExtResource("8_7q5t9")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemies/Enemy1"]
shape = SubResource("RectangleShape2D_1")

[node name="Sprite2D" type="Sprite2D" parent="Enemies/Enemy1"]
modulate = Color(0.8, 0.4, 0.2, 1)
texture = SubResource("GradientTexture2D_2")

[node name="Enemy2" type="CharacterBody2D" parent="Enemies"]
position = Vector2(900, 200)
script = ExtResource("8_7q5t9")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemies/Enemy2"]
shape = SubResource("RectangleShape2D_1")

[node name="Sprite2D" type="Sprite2D" parent="Enemies/Enemy2"]
modulate = Color(0.8, 0.4, 0.2, 1)
texture = SubResource("GradientTexture2D_2")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("9_8r6u0")

[node name="ResourceDisplay" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 1
anchor_left = true
anchor_right = true
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 100.0

[node name="BiomassLabel" type="Label" parent="UI/ResourceDisplay"]
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 100.0
offset_bottom = 20.0
text = "Biomass: 10"

[node name="MineralsLabel" type="Label" parent="UI/ResourceDisplay"]
layout_mode = 0
offset_left = 120.0
offset_top = 0.0
offset_right = 220.0
offset_bottom = 20.0
text = "Minerals: 5"

[node name="GeneticMaterialLabel" type="Label" parent="UI/ResourceDisplay"]
layout_mode = 0
offset_left = 240.0
offset_top = 0.0
offset_right = 340.0
offset_bottom = 20.0
text = "Genetic: 0"

[node name="SecretionsLabel" type="Label" parent="UI/ResourceDisplay"]
layout_mode = 0
offset_left = 360.0
offset_top = 0.0
offset_right = 460.0
offset_bottom = 20.0
text = "Secretions: 0"

[node name="EggsLabel" type="Label" parent="UI/ResourceDisplay"]
layout_mode = 0
offset_left = 480.0
offset_top = 0.0
offset_right = 580.0
offset_bottom = 20.0
text = "Eggs: 0"

[node name="GameStatus" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 2
anchor_top = true
anchor_bottom = true
anchor_right = true
offset_left = 1000.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="TimeLabel" type="Label" parent="UI/GameStatus"]
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 200.0
offset_bottom = 20.0
text = "Time: 0:00"

[node name="UnitsLabel" type="Label" parent="UI/GameStatus"]
layout_mode = 0
offset_left = 0.0
offset_top = 30.0
offset_right = 200.0
offset_bottom = 50.0
text = "Units: 0"

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_0k8m2")

[sub_resource type="Gradient" id="Gradient_1"]
colors = PackedColorArray(0.8, 0.2, 0.8, 1, 0.6, 0.1, 0.6, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1"]
gradient = SubResource("Gradient_1")
width = 32
height = 32

[sub_resource type="Gradient" id="Gradient_2"]
colors = PackedColorArray(0.2, 0.8, 0.2, 1, 0.1, 0.6, 0.1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2"]
gradient = SubResource("Gradient_2")
width = 16
height = 16

[sub_resource type="Gradient" id="Gradient_3"]
colors = PackedColorArray(0.6, 0.6, 0.6, 1, 0.4, 0.4, 0.4, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3"]
gradient = SubResource("Gradient_3")
width = 16
height = 16

[sub_resource type="TileSet" id="TileSet_1"]
tile_size = Vector2i(16, 16)

[sub_resource type="NavigationPolygon2D" id="NavigationPolygon2D_1"]
vertices = PackedVector2Array(0, 0, 1280, 0, 1280, 720, 0, 720)
polygons = [PackedInt32Array(0, 1, 2, 3)]
